[gd_scene load_steps=19 format=3 uid="uid://c8ub5prxpvumm"]

[ext_resource type="Script" path="res://scenes/LogicGates/Level2.gd" id="1_sqi2j"]
[ext_resource type="PackedScene" uid="uid://cvwt64idjbb5l" path="res://scenes/LogicGates/Level2Player.tscn" id="2_ayh7c"]
[ext_resource type="PackedScene" uid="uid://lbbq2av2o8bj" path="res://scenes/LogicGates/BoardInput.tscn" id="3_ac2p1"]
[ext_resource type="Texture2D" uid="uid://mcpasq1rq5iv" path="res://assets/textures/wood_floor_diff_4k.png" id="3_gaya5"]
[ext_resource type="PackedScene" uid="uid://cis8glfj47vl6" path="res://scenes/LogicGates/Board.tscn" id="3_xl3t5"]
[ext_resource type="PackedScene" uid="uid://dgkxfywcxbkjq" path="res://scenes/LogicGates/BoardOutput.tscn" id="4_1hq3w"]
[ext_resource type="Texture2D" uid="uid://bvw2slwm26fcu" path="res://assets/textures/wood_floor_nor_gl_4k.png" id="4_daeqx"]
[ext_resource type="Texture2D" uid="uid://dc1bc2oaq7syk" path="res://assets/textures/wood_floor_rough_4k.png" id="5_lmccw"]
[ext_resource type="PackedScene" uid="uid://c3sm4fytn8mcq" path="res://scenes/LogicGates/CheckButton.tscn" id="5_y1q1y"]
[ext_resource type="Texture2D" uid="uid://bnnmw4pfbryrr" path="res://assets/textures/factory_wall_diff_4k.png" id="6_sumi7"]
[ext_resource type="Texture2D" uid="uid://dggr73lrdjqdj" path="res://assets/textures/factory_wall_nor_gl_4k.png" id="7_nfsdd"]
[ext_resource type="Texture2D" uid="uid://cltbh2y572x8u" path="res://assets/textures/factory_wall_rough_4k.png" id="8_kd5gb"]

[sub_resource type="BoxMesh" id="BoxMesh_dgya7"]
size = Vector3(10, 0.5, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i3e2x"]
albedo_texture = ExtResource("3_gaya5")
roughness_texture = ExtResource("5_lmccw")
normal_enabled = true
normal_texture = ExtResource("4_daeqx")
uv1_scale = Vector3(15, 15, 15)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_alpex"]
points = PackedVector3Array(-5, -0.25, -5, -5, 0.25, -5, 5, -0.25, -5, -5, -0.25, 5, -5, 0.25, 5, 5, 0.25, -5, 5, -0.25, 5, 5, 0.25, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cm74h"]
albedo_texture = ExtResource("6_sumi7")
roughness_texture = ExtResource("8_kd5gb")
normal_enabled = true
normal_texture = ExtResource("7_nfsdd")
uv1_scale = Vector3(15, 15, 15)

[sub_resource type="BoxMesh" id="BoxMesh_pccyi"]
material = SubResource("StandardMaterial3D_cm74h")
size = Vector3(10, 3, 0.5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_sa873"]
points = PackedVector3Array(5, 1.5, 0.25, 5, 1.5, -0.25, -5, 1.5, 0.25, 5, -1.5, 0.25, 5, -1.5, -0.25, -5, 1.5, -0.25, -5, -1.5, 0.25, -5, -1.5, -0.25)

[node name="World" type="Node3D"]
script = ExtResource("1_sqi2j")
levelName = "level_2"

[node name="Player" parent="." instance=ExtResource("2_ayh7c")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.574034, 0.818831, 0, -0.818831, 0.574034, 0, 3.2063, 3.81144)

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("BoxMesh_dgya7")
surface_material_override/0 = SubResource("StandardMaterial3D_i3e2x")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("ConvexPolygonShape3D_alpex")

[node name="Wall" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -4.75)
mesh = SubResource("BoxMesh_pccyi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -4.75)
shape = SubResource("ConvexPolygonShape3D_sa873")

[node name="Wall2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.51525)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -4.75)
mesh = SubResource("BoxMesh_pccyi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -4.75)
shape = SubResource("ConvexPolygonShape3D_sa873")

[node name="Wall3" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 10, 0, 0.045)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -4.75)
mesh = SubResource("BoxMesh_pccyi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -4.75)
shape = SubResource("ConvexPolygonShape3D_sa873")

[node name="Wall4" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0.045)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -5)
mesh = SubResource("BoxMesh_pccyi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -4.75)
shape = SubResource("ConvexPolygonShape3D_sa873")

[node name="Board" parent="." instance=ExtResource("3_xl3t5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.415, -4.5)

[node name="BoardInputA" parent="Board" instance=ExtResource("3_ac2p1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.585, 0.0999999)

[node name="Label3D" type="Label3D" parent="Board/BoardInputA"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.08)
text = "A"

[node name="BoardInputB" parent="Board" instance=ExtResource("3_ac2p1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -0.415, 0.0999999)

[node name="Label3D" type="Label3D" parent="Board/BoardInputB"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0799999)
text = "B"

[node name="BoardOutput" parent="Board" instance=ExtResource("4_1hq3w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.085, 0.0999999)

[node name="Label3D" type="Label3D" parent="Board/BoardOutput"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.08)
text = "Q"

[node name="CheckButton" parent="." instance=ExtResource("5_y1q1y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, -4.4)
